[gd_scene load_steps=5 format=3 uid="uid://cvhht7yulrk1m"]

[ext_resource type="Script" path="res://scenes/UI/default_menu.gd" id="1_2nbnt"]
[ext_resource type="Texture2D" uid="uid://meqevyf8h6yw" path="res://assets/sprites/ui/menus/HollowKnightTitle.png" id="1_mkpt2"]
[ext_resource type="PackedScene" uid="uid://cmquejq3d4quu" path="res://scenes/UI/menu_button.tscn" id="3_8ibmj"]
[ext_resource type="Texture2D" uid="uid://ctj2jm41vk2qk" path="res://assets/sprites/menus/team_cherry_logo_main_menu.png" id="3_47p48"]

[node name="DefaultMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2nbnt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.0
offset_top = -436.5
offset_right = 595.0
offset_bottom = 436.5
grow_horizontal = 2
grow_vertical = 2
rotation = -5.10915e-05
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = 75

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_mkpt2")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 30

[node name="StartButton" parent="VBoxContainer/VBoxContainer" instance=ExtResource("3_8ibmj")]
layout_mode = 2
text = "Start Game"

[node name="AudioButton" parent="VBoxContainer/VBoxContainer" instance=ExtResource("3_8ibmj")]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Audio"

[node name="QuitButton" parent="VBoxContainer/VBoxContainer" instance=ExtResource("3_8ibmj")]
layout_mode = 2
text = "Quit Game"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -203.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_47p48")

[connection signal="confirm_audio_finished" from="VBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_confirm_audio_finished"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="confirm_audio_finished" from="VBoxContainer/VBoxContainer/AudioButton" to="." method="_on_audio_button_confirm_audio_finished"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="confirm_audio_finished" from="VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_confirm_audio_finished"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_exit_button_pressed"]
